--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -57,7 +57,7 @@
 /* Header */
 
 	#header {
-		background-image: url("../../images/bg.jpg");
+		background-image: url("../../images/898622334_1c46ec8290_o.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
