--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -57,7 +57,7 @@
 /* Header */
 
 	#header {
-		background-image: url("../../images/dsc0565-cc (1).tif");
+		background-image: url("../../images/paranal.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
