--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2465,7 +2465,7 @@
 	#header {
 		background-color: #1f1815;
 		background-attachment: scroll,								fixed;
-		background-image: url("images/overlay.png"), url("../../images/dsc0565-cc (1).tif");
+		background-image: url("images/overlay.png"), url("../../images/paranal.jpg");
 		background-position: top left,							top left;
 		background-repeat: repeat,								no-repeat;
 		background-size: auto,								auto 100%;
@@ -2931,7 +2931,7 @@
 			#footer {
 				background-attachment: scroll;
 				background-color: #1f1815;
-				background-image: url("images/overlay.png"), url("../../images/dsc0565-cc (1).tif");
+				background-image: url("images/overlay.png"), url("../../images/paranal.jpg");
 				background-position: top left,						bottom center;
 				background-repeat: repeat,							no-repeat;
 				background-size: auto,							cover;
