--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2467,7 +2467,7 @@
 		background-attachment: fixed,								fixed;
 		background-image: url("images/overlay.png"), url("../../images/paranal.jpg");
 		background-position: top left,							top left;
-		background-repeat: none,								no-repeat;
+		background-repeat: no-repeat,								no-repeat;
 		background-size: cover,								auto 100%;
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
@@ -2933,7 +2933,7 @@
 				background-color: #1f1815;
 				background-image: url("images/overlay.png"), url("../../images/paranal.jpg");
 				background-position: top left,						bottom center;
-				background-repeat: repeat,							no-repeat;
+				background-repeat: no-repeat,							no-repeat;
 				background-size: auto,							cover;
 				bottom: auto;
 				left: auto;
