--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1602,7 +1602,7 @@
 		margin: 0 0 2em 0;
 	}
 
-	h3, h4, h5, h6 {
+	h1, h2, h3, h4, h5, h6 {
 		color: #787878;
 		font-weight: 400;
 		line-height: 1em;
@@ -2486,7 +2486,7 @@
 			color: #ffffff;
 		}
 
-		#header h3, #header h4, #header h5, #header h6 {
+		#header h2, header h3, #header h4, #header h5, #header h6 {
 			color: #ffffff;
 		}
 
