--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1603,7 +1603,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #787878;
+		color: #D6DBDF;
 		font-weight: 400;
 		line-height: 1em;
 		margin: 0 0 1em 0;
@@ -2487,11 +2487,8 @@
 		}
 
 		#header h2, header h3, #header h4, #header h5, #header h6 {
-			color: #ffffff;
-		}
-
-		#header h2 {
 			color: #D6DBDF;
+		}
 
 		#header h1 {
 			color: rgba(255, 255, 255, 0.5);
