--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2487,9 +2487,12 @@
 			color: #ffffff;
 		}
 
-		#header h2, header h3, #header h4, #header h5, #header h6 {
+		#header h2 {
 			color: #D6DBDF;
 		}
+
+		#header h3, #header h4, #header h5, #header h6 {
+			color: #787878;
 
 		#header h1 {
 			color: rgba(255, 255, 255, 0.5);
