--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2493,6 +2493,7 @@
 
 		#header h3, #header h4, #header h5, #header h6 {
 			color: #787878;
+		}
 
 		#header h1 {
 			color: rgba(255, 255, 255, 0.5);
