--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2022,7 +2022,7 @@
 				border-radius: 0.35em;
 				border: solid 3px rgba(255, 255, 255, 0.5);
 				color: #fff;
-				content: 'View';
+				content: 'Read';
 				display: inline-block;
 				font-size: 0.8em;
 				font-weight: 400;
@@ -2036,6 +2036,7 @@
 				text-decoration: none;
 				top: 50%;
 				white-space: nowrap;
+				overflow: hidden;
 			}
 
 			.image.thumb:hover:after {
