--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2030,7 +2030,8 @@
 				line-height: 2.25em;
 				margin: -1.25em 0 0 -3em;
 				opacity: 0;
-				padding: 0 1.5em;
+				padding-right: 1.5em;
+				padding-top: 56.25%;
 				position: absolute;
 				text-align: center;
 				text-decoration: none;
