--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2469,11 +2469,11 @@
 
 	#header {
 		background-color: #1f1815;
-		background-attachment: fixed,								fixed;
+		background-attachment: fixed, fixed;
 		background-image: url("images/overlay.png"), url("../../images/paranal.jpg");
-		background-position: top left,							top left;
-		background-repeat: no-repeat,								no-repeat;
-		background-size: cover,								auto 100%;
+		background-position: top left, center;
+		background-repeat: no-repeat, no-repeat;
+		background-size: cover,	cover;
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
 		left: 0;
