--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2473,7 +2473,7 @@
 		background-image: url("images/overlay.png"), url("../../images/paranal.jpg");
 		background-position: top left, center;
 		background-repeat: no-repeat, no-repeat;
-		background-size: cover,	cover;
+		background-size: cover,	auto 100%;
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
 		left: 0;
