--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2469,7 +2469,7 @@
 /* Header */
 
 	#header {
-		position: fixed;
+		position: -50px;
 		background-color: #1f1815;
 		background-attachment: fixed;
 		background-image: url("images/overlay.png"), url("../../images/paranal.jpg");
