--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2009,6 +2009,9 @@
 			position: absolute;
 			top: 0;
 			width: 100%;
+			min-height: 100%;
+  			min-width: 100%;
+  			transform: translate(-50%, -50%);
 			overflow: auto;
 		}
 
