--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2483,7 +2483,7 @@
 		left: 0;
 		padding: 8em 4em 0 0;
 		text-align: right;
-		top: 0;
+		top: -100px;
 		width: 33%;
 	}
 
@@ -2516,7 +2516,7 @@
 	#footer {
 		bottom: -100px;
 		left: 0;
-		right: 30px;
+		right: 50px;
 		padding: 0 4em 6em 0;
 		position: fixed;
 		text-align: right;
