--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2095,6 +2095,7 @@
 
 			.image.avatar img {
 				border-radius: 100%;
+				border: 5px solid #FFFFFF;
 				width: 100%;
 			}
 
@@ -2483,7 +2484,7 @@
 		left: 0;
 		padding: 8em 4em 0 0;
 		text-align: right;
-		top: -100px;
+		top: 100px;
 		width: 33%;
 	}
 
@@ -2515,7 +2516,7 @@
 
 	#footer {
 		bottom: -100px;
-		left: 0;
+		left: -50;
 		right: 50px;
 		padding: 0 4em 6em 0;
 		position: fixed;
