--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2472,7 +2472,6 @@
 
 	#header {
 		position: fixed;
-		right: 50px;
 		background-color: #1f1815;
 		background-attachment: fixed;
 		background-image: url("images/overlay.png"), url("../../images/paranal.jpg");
@@ -2482,9 +2481,9 @@
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
 		left: 0;
-		padding: 8em 4em 0 0;
+		padding: 4em 4em 0 0;
 		text-align: right;
-		top: 100px;
+		top: 0;
 		width: 33%;
 	}
 
@@ -2516,8 +2515,7 @@
 
 	#footer {
 		bottom: -100px;
-		left: -50;
-		right: 50px;
+		left: 0;
 		padding: 0 4em 6em 0;
 		position: fixed;
 		text-align: right;
