--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2480,8 +2480,8 @@
 		background-size: cover,33%;
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
-		left: 0;
-		padding: 4em 4em 0 0;
+		left: -25;
+		padding: 8em 4em 0 0;
 		text-align: right;
 		top: 0;
 		width: 33%;
@@ -2507,7 +2507,7 @@
 		}
 
 		#header .image.avatar {
-			margin: 0 0 50px 0;
+			margin: 0 0 25px 0;
 			width: 8.5em;
 		}
 
@@ -2534,7 +2534,7 @@
 			color: rgba(255, 255, 255, 0.4);
 			font-size: 0.8em;
 			list-style: none;
-			margin: 1em 0 0 0;
+			margin: .5em 0 0 0;
 			padding: 0;
 		}
 
