--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2480,8 +2480,8 @@
 		background-size: cover,33%;
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
-		left: -25;
-		padding: 8em 4em 0 0;
+		left: -50px;
+		padding: 8em 2em 0 0;
 		text-align: right;
 		top: 0;
 		width: 33%;
