--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2481,14 +2481,15 @@
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
 		left: -50px;
-		padding: 8em 2em 0 0;
+		padding: 8em 4em 0 0;
 		text-align: right;
 		top: 0;
 		width: 33%;
 	}
 
 		#header strong, #header b {
-			color: #ffffff;
+			color: #d8b2b2;
+			font-weight: 800;
 		}
 
 		#header h2 {
@@ -2501,7 +2502,7 @@
 
 		#header h1 {
 			color: rgba(255, 255, 255, 0.5);
-			font-size: 1.35em;
+			font-size: 2.7em;
 			line-height: 1.75em;
 			margin: 0;
 		}
@@ -2519,7 +2520,7 @@
 		padding: 0 4em 6em 0;
 		position: fixed;
 		text-align: right;
-		width: 35%;
+		width: 33%;
 	}
 
 		#footer .icons {
