--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1725,7 +1725,7 @@
 	}
 
 	header h2 + p {
-		font-size: 1.1em;
+		font-size: 1em;
 		margin-top: -1em;
 		line-height: 1.5em;
 	}
@@ -2493,8 +2493,8 @@
 		}
 
 		#header h2 {
-			color: #D6DBDF;
-			font-size: 1.1em;
+			color: #e4e6ea;
+			font-size: 1em;
 		}
 
 		#header h3, #header h4, #header h5, #header h6 {
