--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2477,14 +2477,14 @@
 		background-image: url("images/overlay.png"), url("../../images/paranal.jpg");
 		background-position: left top;
 		background-repeat: no-repeat, no-repeat;
-		background-size: cover,35%;
+		background-size: cover,33%;
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
 		left: -50px;
 		padding: 8em 4em 0 0;
 		text-align: right;
 		top: 0;
-		margin
+		margin-right: -25px;
 		width: 35%;
 	}
 
@@ -2522,6 +2522,7 @@
 		padding: 0 4em 6em 0;
 		position: fixed;
 		text-align: right;
+		margin-right: -25px;
 		width: 35%;
 	}
 
