--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2481,6 +2481,7 @@
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
 		padding: 8em 2em 0 0;
+		left: 25px;
 		text-align: right;
 		top: 0;
 		margin-right: -25px;
