--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1585,7 +1585,7 @@
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #49bf9d !important;
+			color: #cc9999 !important;
 			text-decoration: none;
 		}
 
