--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1579,7 +1579,7 @@
 		-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
-		color: #49bf9d;
+		color: #cc9999;
 		text-decoration: none;
 	}
 
@@ -1796,7 +1796,7 @@
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #49bf9d;
+			border-color: #cc9999;
 		}
 
 	.select-wrapper {
@@ -1907,7 +1907,7 @@
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #49bf9d;
+			border-color: #cc9999;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2358,8 +2358,8 @@
 		input[type="reset"]:hover,
 		input[type="button"]:hover,
 		.button:hover {
-			border-color: #49bf9d;
-			color: #49bf9d !important;
+			border-color: #cc9999;
+			color: #cc9999 !important;
 		}
 
 		input[type="submit"]:active,
@@ -2367,8 +2367,8 @@
 		input[type="button"]:active,
 		.button:active {
 			background-color: rgba(73, 191, 157, 0.1);
-			border-color: #49bf9d;
-			color: #49bf9d !important;
+			border-color: #cc9999;
+			color: #cc9999 !important;
 		}
 
 		input[type="submit"].icon,
@@ -2413,8 +2413,8 @@
 		input[type="reset"].special,
 		input[type="button"].special,
 		.button.special {
-			background-color: #49bf9d;
-			border-color: #49bf9d;
+			background-color: #cc9999;
+			border-color: #cc9999;
 			color: #ffffff !important;
 		}
 
