--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2366,7 +2366,7 @@
 		input[type="reset"]:active,
 		input[type="button"]:active,
 		.button:active {
-			background-color: rgba(73, 191, 157, 0.1);
+			background-color: #b36666;
 			border-color: #cc9999;
 			color: #cc9999 !important;
 		}
