--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2339,7 +2339,7 @@
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		background-color: transparent;
 		border-radius: 0.35em;
-		border: solid 3px #efefef;
+		border: solid 3px #cc9999;
 		color: #787878 !important;
 		cursor: pointer;
 		display: inline-block;
@@ -2347,8 +2347,8 @@
 		height: 3.15em;
 		height: calc(2.75em + 6px);
 		line-height: 2.75em;
-		min-width: 7em;
-		padding: 0 1em;
+		min-width: 10em;
+		padding: 0 1.5em;
 		text-align: center;
 		text-decoration: none;
 		white-space: nowrap;
@@ -2416,6 +2416,13 @@
 			background-color: #cc9999;
 			border-color: #cc9999;
 			color: #ffffff !important;
+			min-width = 5em;
+			font-weight: 600;
+			height: 2.75em;
+			height: calc(2.75em + 6px);
+			line-height: 2.25em;
+			padding: 0 1em;
+			
 		}
 
 			input[type="submit"].special:hover,
