--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2359,7 +2359,7 @@
 		input[type="button"]:hover,
 		.button:hover {
 			border-color: #cc9999;
-			color: #cc9999 !important;
+			color: #ffffff !important;
 			background-color: #b36666;
 		}
 
