--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2337,18 +2337,18 @@
 		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
-		background-color: transparent;
+		background-color: #cc9999;
+		opacity: .5;
 		border-radius: 0.35em;
 		border: solid 3px #efefef;
 		color: #787878 !important;
 		cursor: pointer;
 		display: inline-block;
 		font-weight: 400;
-		height: 3.15em;
-		height: calc(2.75em + 6px);
-		line-height: 2.75em;
-		min-width: 6em;
-		padding: 0 1.5em;
+		height: 2em;
+		line-height: 1.6em;
+		min-width: 5em;
+		padding: 0 .75em;
 		text-align: center;
 		text-decoration: none;
 		white-space: nowrap;
