--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2348,7 +2348,7 @@
 		height: 1.5em;
 		line-height: .75em;
 		min-width: 5em;
-		padding: 0 .35em;
+		padding: .25em .25em .25em .25em;
 		text-align: center;
 		text-decoration: none;
 		white-space: nowrap;
