--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2392,7 +2392,7 @@
 		input[type="button"].fit,
 		.button.fit {
 			display: block;
-			margin: 0 0 1em 0;
+			margin: 0 0 .5em 0;
 			min-width: 0;
 			width: 100%;
 		}
