--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2352,6 +2352,7 @@
 		text-align: center;
 		text-decoration: none;
 		white-space: nowrap;
+		font-size: 15px;
 	}
 
 		input[type="submit"]:hover,
