--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2480,16 +2480,17 @@
 		background-attachment: fixed;
 		height: 5%;
 		width: 35%;
-		text-align: center;
 		position: top left;
-		padding: 1em 1em 1em 1em;
 		z-index: 10;
 	
 	#navbar a {
-		display: block;
+		color: #FFFFFF;
+		display: inline-block;
 		float: left;
 		width: 25%;
 		height: 100%;
+		padding: 1em 1em 1em 1em;
+		text-align: center;
 		
 }
 		#navbar a:hover {
