--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2480,7 +2480,7 @@
 		background-attachment: fixed;
 		height: 5%;
 		width: 33%;
-		position: top left;
+		position: 50 px 0px;
 		z-index: 10;
 }
 	#navbar ul {
@@ -2496,10 +2496,8 @@
 	
 	#navbar li a {
 		display: block;
-		width: 25%;
-		height: 100%;
 		color: #FFFFFF;
-		padding: 1em 1em 1em 1em;
+		padding: 0;
 		text-align: center;
 		text-decoration: none;
 		
