--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2496,7 +2496,7 @@
 	#navbar li a {
 		display: block;
 		color: #FFFFFF;
-		padding: 0;
+		padding: 0 5%;
 		text-align: center;
 		text-decoration: none;
 		
