--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2481,7 +2481,7 @@
 		background-color: #000000;
 		overflow: hidden;
 		z-index: 10;
-		width:100%;
+		width:35%;
 		height: 6%;
 		margins: auto;
 		text-decoration: none;
@@ -2516,6 +2516,7 @@
 		height: 100%;
 		padding: 8em 3em 0 0;
 		text-align: right;
+		margin-right: -25px
 		top: 0;
 		width: 35%;
 	}
