--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2500,7 +2500,7 @@
 		color: #FFFFFF !important;
 		background-color: #b36666;
 		text-decoration: none;
-		
+}		
 	.active { 
 		background-color: #b36666;
 }
