--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -212,6 +212,8 @@
 		.container {
 			width: 960px;
 		}
+		
+		
 
 	}
 
@@ -2954,7 +2956,12 @@
 			ul.icons li .icon {
 				font-size: 1.25em;
 			}
-
+		/* Navbar */
+			.navbar {
+				width: 100%;
+				height: 6%
+		}
+		
 		/* Header */
 
 			#header {
@@ -3057,7 +3064,12 @@
 				ul.labeled-icons li h3 {
 					line-height: 1.75em;
 				}
-
+		/* Navbar */
+		
+			.navbar {
+				height: 5%;
+				width: 100%;
+		}
 		/* Header */
 
 			#header {
