--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2493,7 +2493,7 @@
 		text-align: center;
 		padding: .5em;
 		text-decoration: none;
-		font-size: 17px;
+		font-size: 20px;
 		width: 25%;
 	}
 
@@ -2959,9 +2959,13 @@
 		/* Navbar */
 			.navbar {
 				width: 100%;
-				height: 6%
-		}
+				height: 8%
+			}
 		
+			.navbar a {
+				padding: .1em;
+				font-size: 15px;
+			}
 		/* Header */
 
 			#header {
@@ -3067,9 +3071,14 @@
 		/* Navbar */
 		
 			.navbar {
-				height: 5%;
+				height: 8%;
 				width: 100%;
-		}
+			}
+		
+			.navbar a {
+				padding: .1em;
+				font-size: 10px;
+			}
 		/* Header */
 
 			#header {
