--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2533,7 +2533,7 @@
 
 		#header h2 {
 			color: #f3f3f5;
-			font-size: .8em;
+			font-size: 1.2em;
 		}
 
 		#header h3, #header h4, #header h5, #header h6 {
@@ -2959,11 +2959,12 @@
 		/* Navbar */
 			.navbar {
 				width: 100%;
-				height: 8%
+				height: 8%;
+				margin-bottom: 25px;
 			}
 		
 			.navbar a {
-				padding: .1em;
+				padding: .2em;
 				font-size: 15px;
 			}
 		/* Header */
@@ -3073,11 +3074,12 @@
 			.navbar {
 				height: 8%;
 				width: 100%;
+				margin-bottom: 25px;
 			}
 		
 			.navbar a {
-				padding: .1em;
-				font-size: 10px;
+				padding: .2em;
+				font-size: 15px;
 			}
 		/* Header */
 
