--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2477,6 +2477,14 @@
 /* Header */
 
 	.navbar {
+		-moz-appearance: none;
+		-webkit-appearance: none;
+		-ms-appearance: none;
+		appearance: none;
+		-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		position: fixed;
 		position: top left;
 		background-color: #000000;
