--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2541,7 +2541,7 @@
 
 		#header h2 {
 			color: #f3f3f5;
-			font-size: 1.2em;
+			font-size: 25px;
 		}
 
 		#header h3, #header h4, #header h5, #header h6 {
