--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2967,16 +2967,19 @@
 		/* Navbar */
 			.navbar {
 				width: 100%;
-				height: 8%;
-				margin-bottom: 25px;
+				height: 6%;
+
 			}
 		
 			.navbar a {
-				padding: .3em;
+				padding: .5em;
 				font-size: 15px;
+				margin-bottom: 10px;
 			}
 		/* Header */
-
+			#header h2 {
+				font-size: 10px;
+			}
 			#header {
 				background-attachment: fixed;
 				background-position: top left, center center;
@@ -3080,14 +3083,14 @@
 		/* Navbar */
 		
 			.navbar {
-				height: 8%;
-				width: 100%;
-				margin-bottom: 25px;
+				height: 6%;
+
 			}
 		
 			.navbar a {
 				padding: .3em;
 				font-size: 15px;
+				margin-bottom: 10px;
 			}
 		/* Header */
 
