--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2986,7 +2986,8 @@
 			}
 			#header {
 				background-attachment: fixed;
-				background-position: top left, center center;
+				background-position: top left, top left;
+				background-size: cover cover, auto auto;
 				left: auto;
 				padding: 6em 4em;
 				position: relative;
