--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2512,8 +2512,8 @@
 		text-decoration: none;
 }		
 	.active { 
-		background-color: #FFFFFF;
-		color: #b36666 !important;
+		background-color: #cc9999;
+		color: #FFFFFF !important;
 }
 			  
 
