--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2342,20 +2342,20 @@
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		background-color: #cc9999;
 		opacity: .8;
-		border-radius: 0.25em;
-		border: solid 1px #efefef;
+		border-radius: 0.35em;
+		border: solid 3px #efefef;
 		color: #ffffff !important;
 		cursor: pointer;
 		display: inline-block;
 		font-weight: 400;
-		height: 1.5em;
-		line-height: .75em;
-		min-width: 5em;
-		padding: .25em .25em .25em .25em;
+		height: 3.15em;
+		height: calc(2.75em + 6px);
+		line-height: 2.75em;
+		min-width: 10em;
+		padding: 0 1.5em;
 		text-align: center;
 		text-decoration: none;
 		white-space: nowrap;
-		font-size: 15px;
 	}
 
 		input[type="submit"]:hover,
