--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2611,7 +2611,7 @@
 		margin-left: 35%;
 		max-width: 54em;
 		padding: 4em 4em 4em 4em;
-		width: calc(100% - 35%);
+		width: 70%;
 	}
 
 		#main > section {
