--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2901,6 +2901,19 @@
 			body, input, select, textarea {
 				font-size: 12pt;
 			}
+		
+		/* Navbar */
+			.navbar {
+				width: 100%;
+				height: 6%;
+
+			}
+
+			.navbar a {
+				padding: .2em .2em .3em .2em;
+				font-size: 12px;
+
+			}
 
 	}
 
@@ -3098,7 +3111,8 @@
 		/* Header */
 
 			#header {
-				padding: 2.25em 1.5em;			}
+				padding: 2.25em 1.5em;
+				background-size: auto;}
 
 
 				#header h1 {
@@ -3177,7 +3191,7 @@
 
 			#header {
 				padding: 4.5em 1.5em;
-				background-size: cover;
+				background-size: auto;
 			}
 
 				#header h1 br {
