--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1580,7 +1580,7 @@
 		-webkit-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
-		color: #cc9999;
+		color: #c97d7d;
 		text-decoration: none !important;
 	}
 
