--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2500,7 +2500,7 @@
 		float: left;
 		color: #FFFFFF;
 		text-align: center;
-		padding: .5em;
+		padding: 1em;
 		text-decoration: none;
 		font-size: 20px;
 		height: auto;
